--- a/s/sa/sal/salenearn.com.html
+++ b/s/sa/sal/salenearn.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the salenearn.com privacy policy that was archived on 2013-11-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131106112657id_/http%3A//www.salenearn.com/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the salenearn.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214005540id_/http%3A//www.salenearn.com/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Privacy Policy - salenearn.com
-</title><meta name="description" content="saleNearn.com - India's largest online free classifieds site offering - Buy, Sell anything online now in India. Find - faster and easier, No registration required. Post your Ad now!"><link href="css/salenearn.css" rel="stylesheet" type="text/css">
+</title><link rel="icon" href="http://www.salenearn.com/images/icon.png"><link rel="shortcut icon" href="http://www.salenearn.com/images/favicon.ico" type="image/x-icon"><meta name="description" content="saleNearn.com - India's largest online free classifieds site offering - Buy, Sell anything online now in India. Find - faster and easier, No registration required. Post your Ad now!"><link href="css/salenearn.css" rel="stylesheet" type="text/css">
     <script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=108966722642196"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="js/mainscript.js"></script>
     <script type="text/javascript">
         (function (i, s, o, g, r, a, m) {
@@ -17,34 +17,85 @@
 </head>
 <body>
     <form method="post" action="privacy-policy.aspx" id="form1">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTI4NjQxMjcyNWRkef7cqYwqolF0TdsMULNMyRSCXXONJAnk3y+1e/I8Ed4=">
+<div class="aspNetHidden">
+<input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="">
+<input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJODYyNDMzMzAwD2QWAgIDD2QWAgIIDw8WAh4EVGV4dAU2UHJpdmFjeSBQb2xpY3kgLSBJbmRpYSdzIGZyZWUgY2xhc3NpZmllZHMgLSAgU2FsZW5lYXJuZGRkC9PP1DqXCB3NdkyL9QmUy8VLbyjCi5UDezTOiO8EF7E=">
+</div>
+
+<script type="text/javascript">
+//<![CDATA[
+var theForm = document.forms['form1'];
+if (!theForm) {
+    theForm = document.form1;
+}
+function __doPostBack(eventTarget, eventArgument) {
+    if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
+        theForm.__EVENTTARGET.value = eventTarget;
+        theForm.__EVENTARGUMENT.value = eventArgument;
+        theForm.submit();
+    }
+}
+//]]>
+</script>
 
 
-<script src="/ScriptResource.axd?d=ysw4pk_bvPKbU54plQdeFu_jHomgoW3rnZO-Lk8Dwxv3BA_Iycyx8Nnee4cR2Z-LzpV26RxTMVnT66hVsKqMjd_7inof0WFHmqKwSfhCWjkIEr002sEjgz4DFB5tkAepu5mxvYqxC9ECDpFw9io1HQiLGBfU5apUf2B0QdcnlKYlSQU2Mr633KjzfjPtByV80&amp;t=6119e399" type="text/javascript"></script>
+<script src="/WebResource.axd?d=cVV_wO-8CyKOXJUxbqAFJcdQnqPixVWMV7cIujiCJNBHgfwwKEUED_5Pt_8R9RWfFsk8wcUCxj8rPRgGFMNnprkO1mMH0mafJ4Wik71CqxY1&amp;t=635089743480000000" type="text/javascript"></script>
+
+
+<script src="/ScriptResource.axd?d=Ss3GvbfqwQHwOLRj2t2MuQbHpb1kGJqQrbKBqrq9uLGcDIN3ynXCk02iJq2ochY2GBhZTUzfIrMBJODXH3-b1EFfYLaokPvH0Lg65W8vx6tDx8BwfBIig-It8FgmTKMN-cV3V-qdvSt5XrsB19PawYU4z-P_M1m5QnU6K0QFEdzLk_z-xiflVTRGTvp7rKaz0&amp;t=6119e399" type="text/javascript"></script>
 <script type="text/javascript">
 //<![CDATA[
 if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side framework failed to load.');
 //]]>
 </script>
 
-<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEdAAP/fRON4tBRZWlJEc6fLuUI4XMDuEozp6a5hDOogMsx3I7U3Vc0WZ+wxclqyPFfzmN8kH8WYHhLNFeFXkb25zbZ02vIwg22XhwzmbcuxzFsrg==">
-    
+<script src="/ScriptResource.axd?d=BPjAqUExqzyE_C7tLOXmyLvtMdXA1WoxIBVUds1ILY6eGe7Jvt0T0VxrADFgKYY4lOe27ciBGNfWxgWT7B_ZduRJcXoVB3XH8-ckjxlNTNJ3WEYRsaTQ1IUEKCsm86xZ-1gd4o33FzV3a7dEqG7MQxlC9hkuN4yze1Uk8B9JEJcHMdAZEiFC43Ro8dVgZKbv0&amp;t=6119e399" type="text/javascript"></script>
+<div class="aspNetHidden">
+
+	<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEdAAOCsPI7YkxGtnH7LIwB42z64XMDuEozp6a5hDOogMsx3I7U3Vc0WZ+wxclqyPFfzmOIlON5vvMiE3rSZx2/Yk/ghZqcjAoT76O9FJPaG3fz7A==">
+</div>
+    <script type="text/javascript">
+//<![CDATA[
+Sys.WebForms.PageRequestManager._initialize('scrpt', 'form1', ['tupdpnl','updpnl'], [], [], 90, '');
+//]]>
+</script>
+
     <div id="Main-Wraper"><div id="Main-Wraper-inner"><div id="Main-Container"><div id="Main-Container-inner">
   <div id="Wraper-Container">
-  <script>    (function (d, s, id) {
+  <script src="http://www.salenearn.com/scripts/jquery.min.js" type="text/javascript"></script>
+<script>    (function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
         js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=108966722642196";
         fjs.parentNode.insertBefore(js, fjs);
     } (document, 'script', 'facebook-jssdk'));</script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 100) {
+                    $('.scrollup').fadeIn();
+                } else {
+                    $('.scrollup').fadeOut();
+                }
+            });
+
+            $('.scrollup').click(function () {
+                $("html, body").animate({ scrollTop: 0 }, 600);
+                return false;
+            });
+
+        });
+</script>
+
 <div id="Body-Container-inner"><div class="header-include-block"><div class="saleNearn-logo"><a href="http://www.salenearn.com/" title="Free classifieds in India, Post free classifieds Ads, Free online advertising India"><img src="http://www.salenearn.com/images/sale-n-earn-logo.png" alt="Free classifieds in India, Post free classifieds Ads, Free online advertising India" width="268" height="97"></a> </div>
 <div class="top-search-block"><div class="top-search-input"><input name="txtkwsearch" type="text" id="txtkwsearch"></div>
 <div class="post-add-button-2">
 <input type="submit" name="btnSearch" value="" id="btnSearch">
 </div>
   </div>
-  <div class="main-title-caption"><span id="lblCaption"></span></div>
+  <div class="main-title-caption"><span id="lblCaption">Privacy Policy - India's free classifieds -  Salenearn</span></div>
 <div class="top-right-links"><a href="http://www.salenearn.com/login.aspx">Sign In</a> | <a href="http://www.salenearn.com/Register.aspx">Register</a> | <a href="http://www.salenearn.com/login.aspx">My Account</a> | <a href="http://www.salenearn.com/help.aspx">Help</a></div>
 <div class="post-add-button"><a href="http://www.salenearn.com/post-free-add.aspx"><img src="http://www.salenearn.com/images/post-free-add-button.gif" width="129" height="43"></a> </div>
 <div class="fb-like" data-href="https://www.facebook.com/Salenearn" data-width="250" data-layout="button_count" data-show-faces="true" data-send="false"></div>
@@ -93,6 +144,13 @@ To review the information.we delete your personal information when we no longer 
   <div id="Footer-Wraper"><div id="main-footer-blockline"></div>
 <div id="footer"><a href="http://www.salenearn.com/">Home</a> | <a href="http://www.salenearn.com/aboutus.aspx">About Us</a> | <a href="http://www.salenearn.com/terms-and-conditions.aspx">Terms and Conditions</a> | <a href="http://www.salenearn.com/privacy-policy.aspx">Privacy Policy</a> | <a href="http://www.salenearn.com/sitemap.html">Sitemap</a> | <a href="http://www.salenearn.com/contactus.aspx">Contact Us</a> </div>
  <div id="footer">Copyright © <a href="http://www.salenearn.com/">saleNearn.com</a></div></div>
+ <span class="scrollup">Scroll Top</span>
+
+ <div style="position: fixed; bottom: 100px; left: 0px; display: block">  
+ <a href="http://www.salenearn.com/post-free-add.aspx"><img src="http://www.salenearn.com/images/Post_free_ad.png" alt="Post Free Ad" title="Post Free Ad">
+ </a>
+</div>
+
 </div></div>
 </div></div></div></div>
     </form>
