--- a/u/up/upl/uploadc.com.html
+++ b/u/up/upl/uploadc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uploadc.com privacy policy that was archived on 2013-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130530055400id_/http%3A//www.uploadc.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uploadc.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214010436id_/http%3A//www.uploadc.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -144,6 +144,8 @@ function trck()
                   
                   <li><a href="http://www.uploadc.com/tour.html" title="Tour"><span>Tour</span></a></li>
                 
+                                     <li><a href="http://www.uploadc.com/rewards.html" title="Tour"><span>Make money</span></a></li>
+
                   <li><a href="http://www.uploadc.com/?op=news"><span>What's New</span></a></li>
                  </ul></td>
               <td><ul id="h-menu2" style="clear:both">
