--- a/s/st/stu/stunicholls.com.html
+++ b/s/st/stu/stunicholls.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stunicholls.com privacy policy that was archived on 2013-10-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131029161531id_/http%3A//www.stunicholls.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stunicholls.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214022949id_/http%3A//www.stunicholls.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -24,19 +24,32 @@
 
 <link href="styles/default.css" rel="stylesheet" type="text/css">
 
-</head>
+<script type="text/javascript" async="" src="http://s3.buysellads.com/ac/bsa.js"></script></head>
 
 <body>
 <section class="wrapper" onclick="">
 	<header>
+		<div class="bsa">
+			<script type="text/javascript">
+			(function(){
+			  var bsa = document.createElement('script');
+				 bsa.type = 'text/javascript';
+				 bsa.async = true;
+				 bsa.src = 'http://s3.buysellads.com/ac/bsa.js';
+			  (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);
+			})();
+			</script>
+			<div id="bsap_1291946" class="bsarocks bsap_fec7b6a081b5d37a0c18a5202667a55a"></div>
+		</div>
 		<a href="index.html" class="title">stu<span>nicholls</span>.com</a>
 		<p class="slogan">.. exploring the possibilities</p>
 	</header>
 	<article class="page">
-				<nav class="menuBar">
-			<ul>
-				<li class="sub1"><span aria-haspopup="true" aria-controls="sub1">Galleries</span>
-					<div id="sub1">
+			<nav class="nav">
+		<ul class="topLevel">
+			<li class="topList galleries" aria-haspopup="true"><span>Galleries</span>
+				<div class="sub">
+					<div class="subInner" aria-haspopup="false">
 						<dl>
 							<dt>jQuery</dt>
 							<dd><a href="gallery/stunicholls-swipe.html">jQuery Swipe Slideshow</a></dd>
@@ -70,9 +83,10 @@
 							<dd><a href="gallery/simple.html">Simple</a></dd>
 						</dl>
 					</div>
-				</li>
-				<li class="sub2"><span aria-haspopup="true" aria-controls="sub2">Menus</span>
-					<div id="sub2">
+				</div>
+			</li><li class="topList menus" aria-haspopup="true"><span>Menus</span>
+				<div class="sub">
+					<div class="subInner" aria-haspopup="false">
 						<dl>
 							<dt>jQuery</dt>
 							<dd><a href="menu/stunicholls-sidebar.html">Sidebar menu for tablets etc.</a></dd>
@@ -135,19 +149,22 @@
 							<dd><a href="menu/simple.html">Simple click</a></dd>
 						</dl>
 					</div>
-				</li>
-				<li class="sub3"><span aria-haspopup="true" aria-controls="sub3">Various</span>
-					<div id="sub3">
+				</div>
+			</li><li class="topList various" aria-haspopup="true"><span>Various</span>
+				<div class="sub">
+					<div class="subInner" aria-haspopup="false">
 						<dl>
 							<dt>jQuery series</dt>
+							<dd><a href="various/stunicholls-imagemap-hover.html">jQuery Imagemap :hover</a></dd>
+							<dd><a href="various/jquery-html5-player.html">jQuery HTML5 Player</a></dd>
 							<dd><a href="various/jquery-headline-changer.html">jQuery Headline Changer</a></dd>
 							<dd><a href="various/jquery-more-list.html">jQuery show / hide list</a></dd>
 							<dd><a href="various/jquery-more-less.html">jQuery more / less</a></dd>
 							<dd><a href="various/jquery-datepicker.html">jQuery Date Picker</a></dd>
-							<dd><a href="various/jquery-days.html">jQuery Days from Date</a></dd>
 						</dl>
 						<dl>
 							<dt>jQuery series</dt>
+							<dd><a href="various/jquery-days.html">jQuery Days from Date</a></dd>
 							<dd><a href="various/jquery-photo-info.html">jQuery Photo-Info</a></dd>
 							<dd><a href="various/jquery-info-slide.html">jQuery Info-Slide</a></dd>
 							<dd><a href="various/jquery-stayput.html">jQuery Stay Put!</a></dd>
@@ -164,9 +181,12 @@
 							<dd><a href="various/more.html">Show me some more</a></dd>
 						</dl>
 					</div>
-				</li>
-			</ul>
-		</nav>		<section class="image">
+				</div>
+			</li>
+			<li class="subPanel"></li>
+		</ul>
+	</nav> <!-- end nav -->
+		<section class="image">
 			<h3>content</h3>
 			<h2>is</h2>
 			<h1>everything ..</h1>
@@ -224,33 +244,18 @@
 				<p>If you would like more information about this practice and to know your choices about not having this information used by these companies, <a href="http://www.google.com/privacy_ads.html">click here</a>.</p>
 			</article>
 						<article class="verticalad">
-				<script type="text/javascript"><!--
-				google_ad_client = "ca-pub-6651950180071236";
-				/* stunicholls */
-				google_ad_slot = "1353932053";
-				google_ad_width = 120;
-				google_ad_height = 240;
-				//-->
-				</script>
-				<script type="text/javascript" src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-				</script>
-				<br><br>
-				<script type="text/javascript"><!--
-				google_ad_client = "ca-pub-6651950180071236";
-				/* stunicholls */
-				google_ad_slot = "1353932053";
-				google_ad_width = 120;
-				google_ad_height = 240;
-				//-->
-				</script>
-				<script type="text/javascript" src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+				<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- stunicholls vertical banner -->
+				<ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-6651950180071236" data-ad-slot="9977204052"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
 				</script>
 			</article>			<br class="clear"><br><br>
 		</section>
 	</article>
 	<footer>
-		<p class="sublinks"><a href="usage.html">Terms of Use</a> | <a class="current" href="privacy.html">Privacy</a> | <a href="support.html">Support</a> | <a href="contact.html">Contact</a> | <a class="rss" href="feed.xml">RSS Feed</a></p>
-		<p class="copyright">Copyright © 2007-2013 stunicholls.com</p>
+		<p class="sublinks"><a href="https://www.facebook.com/stunicholls2013">Facebook</a> | <a href="usage.html">Terms of Use</a> | <a class="current" href="privacy.html">Privacy</a> | <a href="support.html">Support</a> | <a href="contact.html">Contact</a> | <a class="rss" href="feed.xml">RSS Feed</a></p>
+		<p class="copyright">Copyright © 2007-2014 stunicholls.com</p>
 	</footer>
 </section>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
