--- a/s/se/sec/secondspin.com.html
+++ b/s/se/sec/secondspin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the secondspin.com privacy policy that was archived on 2013-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224131808id_/http%3A//www.secondspin.com/help/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the secondspin.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214030645id_/http%3A//www.secondspin.com/help/privacy.jsp) for the most accurate reproduction.-->
 
 <html><head>
     <title>SecondSpin.com</title>
@@ -370,27 +370,29 @@
     <td align="center" class="pageFooter">
         <a href="/">Home</a> &nbsp;|&nbsp; 
         <a href="/cart.jsp">Shopping Cart</a> &nbsp;|&nbsp; 
-	<a href="/stores/ss/favorites/check-favorites.jsp">Personal Favorites</a> &nbsp;|&nbsp; 
-	<a href="https://www.secondspin.com/account.jsp">Your Account</a> &nbsp;|&nbsp; 
-	<a href="https://www.secondspin.com/spundex/my-spundex.jsp">Your Collection</a> &nbsp;|&nbsp; 
+		<a href="/stores/ss/favorites/check-favorites.jsp">Personal Favorites</a> &nbsp;|&nbsp; 
+		<a href="https://www.secondspin.com/account.jsp">Your Account</a> &nbsp;|&nbsp; 
+		<a href="https://www.secondspin.com/spundex/my-spundex.jsp">Your Collection</a> &nbsp;|&nbsp; 
          
-	<a href="https://www.secondspin.com/account-order-history.jsp">Order Status</a><br>
-        <a href="http://www.secondspin.com/stores/ss/about/index.jsp">About Us</a> &nbsp;|&nbsp; 
-	<a href="http://www.secondspin.com/stores/ss/help/shipping-rates.jsp">Shipping Rates</a> &nbsp;|&nbsp; 
-	<a href="http://www.secondspin.com/stores/ss/spindealer/index.jsp">Spin Dealer</a> &nbsp;|&nbsp; 
-	<a href="http://www.secondspin.com/stores/ss/help/buying-help.jsp">Buying Policies</a> &nbsp;|&nbsp; 
-	<a href="http://www.secondspin.com/stores/ss/help/selling-help.jsp">Selling Policies</a> &nbsp;|&nbsp; 
-	<a href="http://www.secondspin.com/help/privacy.jsp">Privacy Policy</a> &nbsp;|&nbsp; 	
-	<a href="http://www.secondspin.com/stores/ss/help/faq.jsp">FAQ</a> &nbsp;|&nbsp; 
-	<a href="http://www.twec.com/corpsite/employment/opportunities_stores.cfm" target="_blank">Careers</a> &nbsp;|&nbsp; 
-	<a href="http://www.secondspin.com/stores/ss/help/contact.jsp">Contact Us</a> </td>
+		<a href="https://www.secondspin.com/account-order-history.jsp">Order Status</a>&nbsp;|&nbsp; 
+		<a href="http://www.secondspin.com/stores/ss/help/shipping-rates.jsp">Shipping Rates</a> &nbsp;|&nbsp;
+		<a href="http://www.secondspin.com/stores/ss/help/contact.jsp">Contact Us</a><br>
+    	<a href="http://www.secondspin.com/stores/ss/about/index.jsp">About Us</a> &nbsp;|&nbsp; 
+		<a href="http://www.secondspin.com/stores/ss/spindealer/index.jsp">Spin Dealer</a> &nbsp;|&nbsp; 
+		<a href="http://www.secondspin.com/stores/ss/help/buying-help.jsp">Buying Policies</a> &nbsp;|&nbsp; 
+		<a href="http://www.secondspin.com/stores/ss/help/selling-help.jsp">Selling Policies</a> &nbsp;|&nbsp; 
+		<a href="http://www.secondspin.com/help/privacy.jsp">Privacy Policy</a> &nbsp;|&nbsp; 	
+		<a href="http://www.secondspin.com/stores/ss/help/supplier-code-of-conduct.jsp">Supplier Code of Conduct</a> &nbsp;|&nbsp;
+		<a href="http://www.secondspin.com/stores/ss/help/faq.jsp">FAQ</a> &nbsp;|&nbsp; 
+		<a href="http://www.twec.com/corpsite/employment/opportunities_stores.cfm" target="_blank">Careers</a> 
+	 </td>
   </tr>
 </tbody></table>
 <p class="pageCopyright">
     <img src="/stores/ss/images/footer/amg.gif" width="30">
-     <span class="size1">© 2013 All Media Guide, LLC.  Portions of content provided by All Music and All Movie Guides</span>
+     <span class="size1">© 2014 All Media Guide, LLC.  Portions of content provided by All Music and All Movie Guides</span>
     <br>
-    Copyright © 1996-2013 SecondSpin, Inc. 
+    Copyright © 1996-2014 SecondSpin, Inc. 
 </p>
 
 
@@ -401,6 +403,20 @@
     _uacct = "UA-739386-1";
     urchinTracker();
     </script> 
+	<script type="text/javascript">
+		/* <![CDATA[ */
+		var google_conversion_id = 1072043169;
+		var google_custom_params = window.google_tag_params;
+		var google_remarketing_only = true;
+		/* ]]> */
+	</script>
+	<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+	</script>
+	<noscript>
+		<div style="display:inline;">
+			<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1072043169/?value=0&amp;guid=ON&amp;script=0"/>
+		</div>
+	</noscript>    
 
 
 
