--- a/s/se/ser/servicemagic.co.uk.html
+++ b/s/se/ser/servicemagic.co.uk.html
@@ -1,12 +1,13 @@
-<!--The following is the downloaded HTML source of the servicemagic.co.uk privacy policy that was archived on 2013-08-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130821181656id_/http%3A//www.servicemagic.co.uk/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the servicemagic.co.uk privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214032404id_/http%3A//www.servicemagic.co.uk/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-<!-- controle smcoukv3 -->
+<!-- optimizely head smtm -->
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="http://avazudsp.net/ret/dspJS.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script src="//cdn.optimizely.com/js/217951153.js"></script>
-																	<title>ServiceMagic UK Privacy Policy</title>
+<!-- optimizely head smtm -->
+<!-- controle smcoukv3 -->
+<title>ServiceMagic UK Privacy Policy</title>
 <meta name="description" content="">
-<meta name="keywords" content="">
 <meta name="format-detection" content="telephone=no">
 <link rel="stylesheet" type="text/css" href="http://front.data.servicemagic.eu/www3.servicemagic.co.uk/common/css/style.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://front.data.servicemagic.eu/www4.servicemagic.co.uk/common/css/temp.css" media="all">
@@ -17,14 +18,31 @@
 <script type="text/javascript" src="http://front.data.servicemagic.eu/common/common/js/fancybox/jquery.fancybox.pack.js"></script>
 <link rel="stylesheet" type="text/css" href="http://front.data.servicemagic.eu/common/common/js/fancybox/jquery.fancybox.css" media="screen">
 <script type="text/javascript" src="http://front.data.servicemagic.eu/common/common/js/hack_balise_html5.js"></script>
+<script type="text/javascript" src="http://front.data.servicemagic.eu/common/common/js/jquery.cookie.js"></script>
 <script type="text/javascript" src="http://front.data.servicemagic.eu/common/common/js/servicemagic-new.js"></script>
+<!-- ______________BEG mod_script_silverpop_gbl (all)_________ -->
+<meta name="com.silverpop.brandeddomains" content="www.pages03.net,servicemagic.mkt6342.com">
+<meta name="com.silverpop.cothost" content="engage3.silverpop.com">
+<script src="http://contentz.mkt932.com/lp/static/js/iMAWebCookie.js?1d10bc16-1437816469a-b9e6bcd68d4fb511170ab3fcff55179d&amp;h=www.pages03.net" type="text/javascript"></script>
+<!-- ______________END mod_script_silverpop_gbl (all)_________ -->
 <link rel="icon" type="image/png" href="http://front.data.servicemagic.eu/www3.servicemagic.co.uk/common/images/favicon-16.png">
 <link rel="apple-touch-icon" href="http://front.data.servicemagic.eu/www3.servicemagic.co.uk/common/images/favicon-57.png">
 <link rel="shortcut icon" type="image/x-icon" href="http://www3.servicemagic.co.uk/favicon.ico">
+<!-- mod_seo_social_network -->
+<link rel="publisher" href="https://plus.google.com/113338134497105868842">
+<meta property="og:locale" content="en_US">
+<!-- <meta property="og:type" content="article"/> -->
+<meta property="og:title" content="ServiceMagic UK Privacy Policy">
+<meta property="og:description" content="">
+<meta property="og:site_name" content="Home Improvement Ideas, Resources &amp; Tips">
+<meta property="article:publisher" content="https://www.facebook.com/servicemagicuk">																
 </head>
 <body class="static">
-<!--[if lte IE 7]><body id="ie7" class="static"><![endif]-->
-<!--[if IE 8]><body id="ie8" class="static"><![endif]-->
+ 
+<!--[if lte IE 7]><body id="ie7" class="static">
+ <![endif]-->
+<!--[if IE 8]><body id="ie8" class="static">
+ <![endif]-->
 <div class="background_elem">
 <a name="top"></a>
 <div id="global">
@@ -47,9 +65,9 @@
 --><li><a href="http://www.servicemagic.co.uk/resources/">Resources</a></li><!--
 --><li><a href="/registration.php">Tradesman sign up</a></li>
 </ul>
-</nav> 		
-<div class="clearboth"></div>
-</div> </header>																																							<div id="fb-root"></div>
+</nav> 										<div class="clearboth"></div>
+</div> 	</header>
+<div id="fb-root"></div>
 <script>(function(d, s, id) {
 var js, fjs = d.getElementsByTagName(s)[0];
 if (d.getElementById(id)) return;
@@ -100,7 +118,7 @@ If you believe that any information we are holding on you is incorrect or incomp
 <div class="sidebar">
 <div class="sidebar_sb_search_combo">
 <h3>Looking for other quotes?</h3>
-<form method="post" action="/search-results.php">
+<form method="post" action="/search-results.php" accept-charset="UTF-8" data-tplcontentmanager="yes">
 <fieldset>
 <label for="select_activite">Select an activity</label>
 <select name="select_activite" id="select_activite">
@@ -185,6 +203,7 @@ If you believe that any information we are holding on you is incorrect or incomp
 <li><a href="/contact.php">Contact Us</a></li>
 <li><a href="/how-it-works.php">How it works</a></li>
 <li><a href="/privacy-policy.php">Privacy policy</a></li>
+<li><a href="/cookie-disclosure">Cookie disclosure</a></li>
 </ul>
 </div>
 <div class="footer_content_col">
@@ -203,19 +222,15 @@ If you believe that any information we are holding on you is incorrect or incomp
 <li><a href="/affiliate-signup.php">Affiliate Sign Up</a></li>
 <li><a href="/d/">Find companies by city</a></li>
 <li><a href="/registration.php">Tradesmen Registration</a></li>
-<li><a href="/terms-consumer.php">Terms &amp; Conditions</a></li>
+<li><a href="/terms.php">Terms &amp; Conditions</a></li>
 </ul>
 </div>
-<div class="footer_content_col">
-</div>
-<div class="footer_content_col">
-</div>
 <div class="clearboth"></div>
-<p class="footer_txt_footer">ServiceMagic Ltd - Hertsmere House 2 Hertsmere road, London, E14 4AB. Company registration number: 6303595. © Copyright ServiceMagic. All Rights Reserved.</p>
+<p class="footer_txt_footer">ServiceMagic Ltd - Hertsmere House, 2 Hertsmere Road, London, E14 4AB. Company registration number: 6303595. © Copyright ServiceMagic. All Rights Reserved.</p>
 </div>
 </div>
 </footer>
-																		 <!-- google plus code in the header -->
+ <!-- google plus code in the header -->
 <script type="text/javascript">
 window.___gcfg = {lang: 'en-GB'};
 (function() {
@@ -288,6 +303,10 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <!-- ______________BEG mod_script_google_plus_one (all)_________ -->
 <!-- ______________END mod_script_google_plus_one (all)_________ -->
 </div>
+<div style="display: none;" class="js_cookie_privacy_law_bar cookie_privacy_law_bar">
+We use cookies to provide you with a better experience. By continuing to browse this site, you agree to our use of cookies. <a href="/cookie-disclosure/">Find out more</a>.
+<span class="js_cookie_bar_close cookie_bar_close">X</span>
+</div>																
 
 
 </body></html>
