--- a/l/lo/loc/locanto.ph.html
+++ b/l/lo/loc/locanto.ph.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the locanto.ph privacy policy that was archived on 2013-08-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130810060849id_/http%3A//www.locanto.ph/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the locanto.ph privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214032550id_/http%3A//www.locanto.ph/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><!--<![endif]--><head>
 		<meta charset="UTF-8">
@@ -19,31 +19,37 @@
 		<link rel="shortcut icon" href="http://static.locanto.ph/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="http://static.locanto.ph/favicon.ico" type="image/x-icon">
 		<link rel="canonical" href="http://www.locanto.ph/info/privacy/">
-		<link rel="stylesheet" href="http://static.locanto.ph/styles/15615_0805/main_locanto.css" type="text/css">
-		<link rel="stylesheet" href="http://static.locanto.ph/styles/15615_0805/sprites_div_locanto.css" type="text/css">
-		<link rel="stylesheet" href="http://static.locanto.ph/styles/15615_0805/sprites_flags.css" type="text/css">
-		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="http://static.locanto.ph/js/15615_0805/basics.js"></script>
+		<link rel="stylesheet" href="http://static.locanto.ph/styles/19169_0213/main_locanto.css" type="text/css">
+		<link rel="stylesheet" href="http://static.locanto.ph/styles/19169_0213/sprites_div_locanto.css" type="text/css">
+		<link rel="stylesheet" href="http://static.locanto.ph/styles/19169_0213/sprites_flags.css" type="text/css">
+		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>var yalwa = yalwa || { };yalwa.v = yalwa.v || { };yalwa.v.upid_key = 'locanto';yalwa.v.is_mobile = false;yalwa.v.price_format = '#,##0.##';yalwa.v.muscula_logID = '';yalwa.v.markerSrc = 'http://static.locanto.ph/images/19169_0213/32/pin_red.png';</script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="http://static.locanto.ph/js/19169_0213/basics.js"></script>
 		<script>var myUrl = "http://www.locanto.ph/info/privacy/"</script>
 <!--[if lte IE 8]>
-		<link rel="stylesheet" href="http://static.locanto.ph/styles/15615_0805/common_msie.css">
+		<link rel="stylesheet" href="http://static.locanto.ph/styles/19169_0213/common_msie.css">
 <![endif]-->
-		<link rel="apple-touch-icon" href="http://static.locanto.ph/images/15615_0805/locanto_iphone_old.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="http://static.locanto.ph/images/15615_0805/locanto_ipad.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="http://static.locanto.ph/images/15615_0805/locanto_iphone.png">
+		<link rel="apple-touch-icon" href="http://static.locanto.ph/images/19169_0213/locanto_iphone_old.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="http://static.locanto.ph/images/19169_0213/locanto_ipad.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="http://static.locanto.ph/images/19169_0213/locanto_iphone.png">
 		<meta name="viewport" content="width=1024">
 
-<script type="text/javascript">
-// <![CDATA[
-var as_tracking_code = "";
+<script>var as_tracking_code = "";
 var _gaq = _gaq || [];
 _gaq.push(
 	['_setAccount', 'UA-785042-11'],
-	['_setSiteSpeedSampleRate', '10'],
+	['_setCustomVar', 1, 'full vs mobile', 'full', 3],
+	['_setCustomVar', 2, 'level', 'global', 3],
+	['_setCustomVar', 3, 'pagetype', 'INFO', 3],
+	['_setCustomVar', 4, 'locale', 'global', 3],
+	['_setSiteSpeedSampleRate', 10],
 	['_trackPageview'],
 	['b._setAccount', 'UA-16149668-1'],
-	['b._trackPageview']
-);
+	['b._setCustomVar', 1, 'full vs mobile', 'full', 3],
+	['b._setCustomVar', 2, 'level', 'global', 3],
+	['b._setCustomVar', 3, 'pagetype', 'INFO', 3],
+	['b._setCustomVar', 4, 'locale', '10-global', 3],
+	['b._trackPageview']);
 (function() {
     var ga = document.createElement('script');
     ga.type = 'text/javascript';
@@ -52,12 +58,15 @@ _gaq.push(
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(ga, s);
 })();
-// ]]>
 </script>
 
+
 		<style type="text/css">
+		#h1_container {
+			left: 180px;
+		}
 		#logo_link > div {
-			background:url(http://static.locanto.ph/images/15615_0805/logo/Locanto_200_hover_english.png) 0 0 no-repeat;
+			background:url(http://static.locanto.ph/images/19169_0213/logo/Locanto_200_hover_english.png) 0 0 no-repeat;
 			width:170px;
 			height:70px
 		}
@@ -81,7 +90,7 @@ _gaq.push(
 						<div id="logo" itemscope="" itemtype="http://schema.org/ImageObject" itemprop="logo">
 								<a id="logo_link" href="http://www.locanto.ph/">
 										<div title="Free Classifieds Philippines"></div>
-								<link itemprop="contentUrl" href="http://static.locanto.ph/images/15615_0805/logo/Locanto_200.png">
+								<link itemprop="contentUrl" href="http://static.locanto.ph/images/19169_0213/logo/Locanto_200.png">
 									</a>
 							</div>
 						<meta itemprop="name" content="Locanto">
@@ -89,7 +98,6 @@ _gaq.push(
 					<meta itemprop="name" content="Yalwa GmbH">
 				</div>
 			</div>
-
 	
 <div id="middle">
 <div id="middle" style="padding:10px;">
@@ -192,12 +200,12 @@ _gaq.push(
 		
 		<li>       
 		       &nbsp;<h3>Responsible authority</h3>
-			<p>Questions regarding data privacy and protection should be addressed to <span id="my1412607489">Sorry, you need JavaScript ON to see the email address (spam protection).</span>
+			<p>Questions regarding data privacy and protection should be addressed to <span id="my160246314"><a href="mailto:privacy@locanto.ph">privacy@locanto.ph</a></span>
 <script type="text/javascript">
 // <![CDATA[
 {
-coded = "RQ3nlb0@1Lbl92L.RO"
-key = "QAPYspy5TvNcOVE2gLDUwajR0XunqbM8diSFIGBl6Z7Jr94CWHk3mzefh1xtKo"
+coded = "AjS5cis@O8icmX8.At"
+key = "eL63aFjDT2Kwbl4fs1hPVIcpkWYnxJqOUoH0tv79iAuCgmZQdEr8NBX5RGSMyz"
 shift = coded.length
 link = ""
 for (i = 0; i < coded.length; i++) {
@@ -209,7 +217,7 @@ for (i = 0; i < coded.length; i++) {
 		link += (key.charAt(ltr))
 	}
 }
-T$("my1412607489").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
+document.getElementById("my160246314").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 }
 //]]>
 </script></p>
@@ -268,9 +276,22 @@ T$("my1412607489").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 			<a rel="nofollow" href="http://www.locanto.ph/info/s/iphone-app.html">iPhone App</a>
 		</li>
 	
+			<li>
+			<a rel="nofollow" href="https://www.locanto.com/info/api/?cid=10">Locanto API</a>
+		</li>
+	
+			<li>
+			<a rel="nofollow" href="http://www.locanto.ph/info/partner/">Partner with Locanto</a>
+		</li>
 	
 	
+			<li>
+			<a rel="nofollow" href="http://www.locanto.ph/info/s/advertise.html">Advertise on Locanto</a>
+		</li>
 	
+			<li>
+			<a href="http://www.locanto.ph/post/">Post Ad</a>
+		</li>
 		</ul>
 
 
@@ -297,9 +318,9 @@ T$("my1412607489").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 				<br>
 
 				<ul>
-					<li>Copyright © 2013 Locanto™</li>
+					<li>Copyright © 2014 Locanto™</li>
 						</ul>
-				<div class="fo" style="display:none">&nbsp;&nbsp;<i>sun4</i></div>
+				<div class="fo" style="display:none">&nbsp;&nbsp;<i>sun7</i></div>
 			</div>
 
 
@@ -308,14 +329,8 @@ T$("my1412607489").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 	</div>
 
 	
-<script type="text/javascript">	var yalwa = yalwa || { };
-	yalwa.v = yalwa.v || { };
-	yalwa.v.upid_key = 'locanto';
-	yalwa.v.is_mobile = false;
-				yalwa.v.price_format = '#,##0.##';
-	</script>
-<script src="http://static.locanto.ph/js/15615_0805/setup_favs/"></script>
-<script src="http://static.locanto.ph/js/15615_0805/setup_login/?aid="></script>
+<script src="http://static.locanto.ph/js/19169_0213/setup_favs/"></script>
+<script src="http://static.locanto.ph/js/19169_0213/setup_login/?aid="></script>
 
 
 
